--- a/css/main.css
+++ b/css/main.css
@@ -75,4 +75,32 @@ header nav .sign li a:hover {
   background-color: white;
   color: black;
   padding: 0 30px;
+}
+
+main {
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: calc(100vh - 40px);
+}
+main .hero-img {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+main .hero-img img {
+  width: 100%;
+  height: 100%;
+}
+main section {
+  grid-column: 2/3;
+}
+main .vidio-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: calc(100vh - 40px);
+}
+main .vidio-1,
+main .vidio-2 {
+  width: 100%;
+  height: 100%;
 }/*# sourceMappingURL=main.css.map */
