--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,12 +15,16 @@
     padding: 0;
     box-sizing: border-box;
 }
+body {
+    height: 1000px;
+}
 header {
     position: fixed;
     top: 0;
     display: grid;
     grid-template-columns: 1fr;
     width: 100vw;
+    background-color: white;
     nav {
         display: grid;
         grid-template-columns: 1fr 3fr 1fr;
