--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,19 +16,19 @@
     box-sizing: border-box;
 }
 body {
-    height: 1000px;
+    height: 2000px;
 }
-header {
+.header {
     position: fixed;
     top: 0;
     display: grid;
     grid-template-columns: 1fr;
+    grid-template-rows: 40px;
     width: 100vw;
     background-color: white;
     nav {
         display: grid;
         grid-template-columns: 1fr 3fr 1fr;
-        grid-template-rows: 40px;
         justify-items: space-evenly;
         align-items: center;
         border-bottom: 3px solid black;
@@ -91,6 +91,7 @@ header {
 main {
     margin-top: 40px;
     @include grid_template(1fr 2fr, calc(100vh - 40px));
+    border-bottom: 5px solid black;
     .hero-img {
         grid-column: 1 / 2;
         // grid-row: -2 / 3;
@@ -110,5 +111,41 @@ main {
     .vidio-2 {
         width: 100%;
         height: 100%;
+    }
+}
+
+article {
+    padding-top: 50px;
+    font-family: serif;
+    header {
+        h1 {
+            margin-top: 40px;
+            font-family: sans-serif;
+            text-align: center;
+            font-size: 2.7rem;
+        }
+        p {
+            margin-top: 15px;
+            text-align: center;
+            q {
+                font-size: 1.8rem;;
+            }
+        }
+    }
+    section {
+        margin: 30px auto;
+        h2 {
+            font-family: sans-serif;
+            text-align: center;
+            font-size: 2.4rem;
+        }
+        p {
+            margin: 10px auto;
+            font-size: 2rem;
+            line-height: 3rem;
+            width: 95vw;
+            border: 1px solid #333;
+            padding: 8px 12px;
+        }
     }
 }
