--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  height: 2000px;
+  height: 4000px;
 }
 
 .header {
@@ -57,6 +57,7 @@ body {
 .header nav .navigasi li a:hover {
   background-color: white;
   color: black;
+  padding: 0 30px;
 }
 .header nav .sign {
   width: 20vw;
@@ -143,4 +144,33 @@ article section p {
   width: 95vw;
   border: 1px solid #333;
   padding: 8px 12px;
+}
+
+figure {
+  padding-top: 50px;
+}
+figure .gallery {
+  box-shadow: 1px 1px 5px 5px rgba(0, 0, 0, 0.5);
+}
+figure h1 {
+  text-align: center;
+}
+figure .gallery {
+  width: 80vw;
+  margin: 50px auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 600px repeat(4, auto);
+  grid-auto-flow: row;
+  gap: 5px;
+}
+figure .gallery .item-satu {
+  grid-column: 1/-1;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover; /* atau contain, atau fill */
+}
+figure .gallery img {
+  width: 100%;
 }/*# sourceMappingURL=main.css.map */
