--- a/scss/main.css
+++ b/scss/main.css
@@ -15,6 +15,7 @@ body {
 
 .header {
   position: fixed;
+  z-index: 9999;
   top: 0;
   display: grid;
   grid-template-columns: 1fr;
@@ -34,29 +35,6 @@ body {
 }
 .header nav .logo h1 {
   font-size: 1.8rem;
-}
-.header nav .sign {
-  width: 20vw;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  justify-items: start;
-}
-.header nav .sign li {
-  list-style: none;
-}
-.header nav .sign li a {
-  text-align: center;
-  display: block;
-  text-decoration: none;
-  font-size: 1.6rem;
-  color: white;
-  background-color: black;
-  padding: 0 30px;
-}
-.header nav .sign li a:hover {
-  background-color: white;
-  color: black;
-  padding: 0 30px;
 }
 .header nav .navigasi {
   width: 50vw;
@@ -78,6 +56,29 @@ body {
   padding: 0 30px;
 }
 .header nav .navigasi li a a:hover {
+  background-color: white;
+  color: black;
+  padding: 0 30px;
+}
+.header nav .navigasi .sign {
+  width: 20vw;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  justify-items: start;
+}
+.header nav .navigasi .sign li {
+  list-style: none;
+}
+.header nav .navigasi .sign li a {
+  text-align: center;
+  display: block;
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: white;
+  background-color: black;
+  padding: 0 30px;
+}
+.header nav .navigasi .sign li a:hover {
   background-color: white;
   color: black;
   padding: 0 30px;
@@ -149,22 +150,28 @@ article section p {
 figure {
   padding-top: 50px;
 }
+figure .gallery {
+  box-shadow: 1px 1px 5px 5px rgba(0, 0, 0, 0.5);
+}
 figure h1 {
   text-align: center;
 }
 figure .gallery {
   width: 80vw;
-  box-shadow: 1px 1px 5px 5px rgba(0, 0, 0, 0.5);
   margin: 50px auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: 400px repeat(4, auto);
   grid-auto-flow: row;
   gap: 5px;
 }
+figure .gallery .item-satu {
+  grid-column: 1/-1;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover; /* atau contain, atau fill */
+}
 figure .gallery img {
   width: 100%;
-}
-figure .gallery img:nth-child(9) {
-  height: 100%;
 }/*# sourceMappingURL=main.css.map */
