--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body {
 
 .header {
   position: fixed;
+  z-index: 999;
   top: 0;
   display: grid;
   grid-template-columns: 1fr;
@@ -77,7 +78,7 @@ body {
   background-color: black;
   padding: 0 30px;
 }
-.header nav .navigasi li a a:hover {
+.header nav .navigasi li a:hover {
   background-color: white;
   color: black;
   padding: 0 30px;
@@ -167,4 +168,67 @@ figure .gallery img {
 }
 figure .gallery img:nth-child(9) {
   height: 100%;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+}
+.card h1 {
+  text-align: center;
+  padding-top: 50px;
+  font-size: 2.4rem;
+}
+.card .flex-card {
+  margin: auto;
+  width: 50vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+}
+.card .flex-card .card-lg {
+  transform: scale(1.1);
+}
+.card .flex-card .section-card {
+  margin: 30px auto;
+  border: 2px solid black;
+  border-radius: 10px;
+  width: 260px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.card .flex-card .section-card header img {
+  border-radius: 50%;
+  padding: 15px;
+}
+.card .flex-card .section-card header h2 {
+  font-size: 2rem;
+  padding-top: 10px;
+  text-align: center;
+}
+.card .flex-card .section-card .content i {
+  margin: 0 auto;
+  font-size: 2rem;
+}
+.card .flex-card .section-card .content p {
+  font-size: 1.6rem;
+  padding-bottom: 20px;
+}
+.card .flex-card .section-card .content h2,
+.card .flex-card .section-card .content i,
+.card .flex-card .section-card footer {
+  padding: 2px 0px 20px;
+}
+.card .flex-card .section-card .content h2 a,
+.card .flex-card .section-card .content i a,
+.card .flex-card .section-card footer a {
+  padding: 5px 20px;
+  background: black;
+  color: white;
+  border-radius: 5px;
+  font-size: 1.8rem;
+  text-decoration: none;
 }/*# sourceMappingURL=main.css.map */
