--- a/css/main.css
+++ b/css/main.css
@@ -9,10 +9,6 @@
   box-sizing: border-box;
 }
 
-body {
-  height: 4000px;
-}
-
 .header {
   position: fixed;
   z-index: 999;
@@ -174,10 +170,25 @@ figure .gallery img:nth-child(9) {
   display: flex;
   flex-direction: column;
 }
+.card h3 {
+  text-align: center;
+  font-size: 2rem;
+  padding-top: 20px;
+}
 .card h1 {
   text-align: center;
   padding-top: 50px;
   font-size: 2.4rem;
+}
+.card a {
+  padding: 5px 20px;
+  background-color: black;
+  width: 300px;
+  margin: auto;
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  font-size: 2rem;
 }
 .card .flex-card {
   margin: auto;
