--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,9 +10,6 @@
 :root {
     font: 62.5%/18px "Oswald";
 }
-body {
-    height: 5000px;
-}
 * {
     margin: 0;
     padding: 0;
@@ -255,6 +252,7 @@ figure {
     display: grid;
     width: 100vw;
     place-items: center;
+    padding-bottom: 130px;
     h1 {
         padding: 70px 0 50px 0;
         font-size: 2.4rem;
@@ -290,6 +288,34 @@ figure {
         button:hover {
             background-color: #333;
             color: white;
+        }
+    }
+}
+#footer {
+    width: 100vw;
+    background-color: #333;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    p {
+        color: white;
+        text-align: center;
+        font-size: 2rem;
+        padding: 10px 20px;
+        i {
+            color: red;
+        }
+    }
+    button {
+        background-color: red;
+        color: white;
+        padding: 10px 20px;
+        border-radius: 10px;
+        margin: auto;
+        a {
+            font-size: 2rem;
+            color: white;
+            text-decoration: none;
         }
     }
 }
